[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/SelectionUI.gd" type="Script" id=1]
[ext_resource path="res://Sprites/King/1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Player/4.png" type="Texture" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/PipeDream-1Zwg.ttf"

[sub_resource type="DynamicFont" id=2]
size = 70
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://fonts/PipeDream-1Zwg.ttf"

[sub_resource type="DynamicFont" id=4]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://fonts/PipeDream-1Zwg.ttf"

[sub_resource type="DynamicFont" id=6]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 5 )

[node name="SelectionUI" type="Control"]
margin_right = 1280.0
margin_bottom = 720.0
script = ExtResource( 1 )

[node name="LabelDescription" type="Label" parent="."]
margin_left = 240.0
margin_top = 166.0
margin_right = 1030.0
margin_bottom = 245.0
custom_fonts/font = SubResource( 2 )
text = "Choose your Character!"
align = 1
valign = 1

[node name="LabelHunter" type="Label" parent="."]
margin_left = 412.0
margin_top = 339.0
margin_right = 514.0
margin_bottom = 374.0
custom_fonts/font = SubResource( 4 )
text = "Hunter"

[node name="LabelVictim" type="Label" parent="."]
margin_left = 724.0
margin_top = 341.0
margin_right = 826.0
margin_bottom = 376.0
custom_fonts/font = SubResource( 4 )
text = "Victim"

[node name="TextureRectPlayerType1" type="TextureRect" parent="."]
margin_left = 427.0
margin_top = 377.0
margin_right = 499.0
margin_bottom = 471.0
texture = ExtResource( 3 )

[node name="TextureRectPlayerType2" type="TextureRect" parent="."]
margin_left = 724.0
margin_top = 384.0
margin_right = 820.0
margin_bottom = 480.0
texture = ExtResource( 2 )

[node name="LabelPlayer1" type="Label" parent="."]
margin_left = 567.0
margin_top = 506.0
margin_right = 682.0
margin_bottom = 541.0
custom_fonts/font = SubResource( 6 )
text = "Player 1"
align = 1

[node name="LabelPlayer2" type="Label" parent="."]
margin_left = 567.0
margin_top = 563.0
margin_right = 688.0
margin_bottom = 598.0
custom_fonts/font = SubResource( 6 )
text = "Player 2"
align = 1

[node name="LabelPlayer1ArrowLeft" type="Label" parent="."]
margin_left = 545.0
margin_top = 506.0
margin_right = 569.0
margin_bottom = 541.0
custom_fonts/font = SubResource( 6 )
text = "<"

[node name="LabelPlayer1ArrowRight" type="Label" parent="."]
margin_left = 681.0
margin_top = 507.0
margin_right = 704.0
margin_bottom = 542.0
custom_fonts/font = SubResource( 6 )
text = ">"
align = 2

[node name="LabelPlayer2ArrowLeft" type="Label" parent="."]
margin_left = 545.0
margin_top = 563.0
margin_right = 569.0
margin_bottom = 598.0
custom_fonts/font = SubResource( 6 )
text = "<"

[node name="LabelPlayer2ArrowRight" type="Label" parent="."]
margin_left = 685.0
margin_top = 564.0
margin_right = 708.0
margin_bottom = 599.0
custom_fonts/font = SubResource( 6 )
text = ">"
align = 2
